# halo2-demo

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
src/: lib.rs
src/basic/: basic_chip.rs  basic_middle.rs  mod.rs  multi_chip_design.rs
src/lookup/: large_range_analysis.rs  mod.rs  rangecheck_lookup.rs
